--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build& webpack-dev-server --open --mode development",
+    "start": "npm run build; webpack-dev-server --open --mode development",
     "build": "webpack --mode development",
     "lint": "eslint src/*.js",
     "test": "jest",
